Final SmartTransit update
